<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Thirty</string>
    <string name="welcome_text">Welcome to the game of Thirty</string>
    <string name="game_round">Round:</string>
    <string name="game_throw">Throw:</string>
    <string name="game_button_throw">throw</string>
    <string name="selection_low">LOW</string>
    <string name="selection_12">12</string>
    <string name="selection_11">11</string>
    <string name="selection_10">10</string>
    <string name="selection_9">9</string>
    <string name="selection_8">8</string>
    <string name="selection_7">7</string>
    <string name="selection_6">6</string>
    <string name="selection_5">5</string>
    <string name="selection_4">4</string>
    <string name="welcome_text_start">welcome to the game of Thirty!</string>
    <string name="game_result">game result</string>
    <string name="total_points">total points:</string>
    <string name="round">round:</string>
    <string name="counting_method">method:</string>
    <string name="start">start</string>
    <string name="count">count</string>
    <string name="new_game">new game</string>
    <string name="placeholder_0">0</string>
    <string name="dice_contentdescription">button for dice</string>
    <string name="main_begin">begin</string>
    <string name="four">FOUR</string>
    <string name="pts">pts</string>
    <string name="placeholder_30">30</string>
</resources>