<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="@color/cool_turquoise_light">

    <TextView
        android:id="@+id/card_method_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counting_method"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_method_variable_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/card_method_textview"
        android:text="@string/four"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_points_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:text="@string/pts"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card_points_variable_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/card_points_textview"
        android:text="@string/placeholder_30"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>