<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cool_blue_medium"
    android:orientation="horizontal"
    tools:context="umu.kaoq0003.thirty.ResultActivity">


    <TextView
        android:id="@+id/result_top_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/game_result"
        android:textColor="@color/cool_black_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result_points_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_top_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/total_points"
        android:textColor="@color/cool_black_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result_variable_points_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_top_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/result_points_textview"
        android:text="@string/placeholder_0"
        android:textColor="@color/cool_turquoise_light"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/result_button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_points_textview"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/selection_background_color"
        android:text="@string/new_game"
        android:textAllCaps="false" />

    <ListView
        android:id="@+id/result_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_button_restart"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">


    </ListView>


</RelativeLayout>
